# llm-agent-course-utils

./: README.md  pyproject.toml  setup.py
custom_helpers/: setup.py
custom_helpers/src/custom_helpers/: import_utils.py
reimagined/: .gitignore
reimagined/conf/: conf.yaml  conf_typing.yaml
reimagined/reimagined/: helpers.py
reimagined/reimagined/prompting/: content_extractor.py
reimagined/reimagined/templates/: test_gen.md
reimagined/src/reimagined/: helpers.py
reimagined/src/reimagined/api/: base.py
reimagined/src/reimagined/prompting/: content_extractor.py  prompter.py
reimagined/src/reimagined/templates/: add_typing_and_docs.md
reimagined_lib/: README.md  pipeline.py  requirements.txt
reimagined_lib/conf/: conf_test_msg.yaml
reimagined_lib/reimagined/api/: __init__.py  grazie.py  openai.py
reimagined_lib/reimagined/prompting/: content_extractor.py
reimagined_lib/reimagined/templates/: add_test_messages.md  add_typing_and_docs.md
scripts/: README.md  smart_pip_freeze.py
tools_basics/: setup.py
tools_lib/: README.md
tools_lib/src/tools_basics/: helpers.py
