[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools-basics"
version = "0.1.0"
description = "A set of tools for lesson 01_basics"
authors = [
    { name = "Rodion Khvorostov", email = "rodion.khvorostov@jetbrains.com" }
]
readme = "README.md"  # Add this if you have a README file
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
